# lifetimes

./: .coverage  .gitignore  .gitignore.amltmp  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  Untitled.ipynb  betageo_fitter.pkl  dev_requirements.txt  docker-compose.yml  exploded.csv  pyproject.toml  readme.md.amltmp  requirements.txt  setup.cfg  setup.py  test_estimation.py  testing_datagen.ipynb  utils.py
benchmarks/: README.md  calibration_and_hold_out_data_performance.py  calibration_and_holdout_data_improvements.ipynb  convergence_summary_graphs.py  test_ll.py
btyd/: __init__.py  plotting.py  utils.py
c_utilities/: beta_ctype_module.c
docs/: Changelog.rst  Examples and recipes.md  High Level Overview.md  Makefile  More examples and recipes.md  Quickstart.md  README.rst  Save and load model.md  Saving and loading model.md  call_graph_modules.html  conf.py  docs_requirements.txt  index.rst  intro.rst  lifetimes-all-tests-graph.html  lifetimes.datasets.rst  lifetimes.fitters.rst  lifetimes.rst  make.bat  modules.rst
jobs/: simulation_BGBBBGExt.py
lifetimes/: Untitled.ipynb  __init__.py  data_compression.py  estimation.py  formulas.py  generate_data.py  models.py  models_analytical.py  plotting.py  stub.py  utils.py  validation.py  version.py
simulations/: bootstrap_correctness_simulation_BG.py  dispersion_of_fit_simulation_BG.py  plot_beta.py  simulation_BGBBBGExt.py  simulation_profile_correlations.py  simulations_BG.py
tests/: __main__.py  (+20 more)
(+38 files in other folders)
